Fix two deprecated warnings in JDK 9.